--- a/aalto.bib
+++ b/aalto.bib
@@ -934,7 +934,7 @@
   pages = {4},
   abstract = {This paper outlines our approach to explore the impact of using two different robotic embodiments on an operators ability to convey emotional and conversational nonverbal signals to a distant interlocutor. Although a human's ability to produce and interpret complex, dynamic facial expressions is seen as an important factor for human-human social interaction, it remains controversial in humanoid/android robotics, whether recreating such expressiveness is really worth the technical challenge, or not. In fact, one way to avoid the risk of giving rise to uncanny feelings in human observers is to follow an abstract design for humanoid robots. This question is also relevant in the context of mediated interaction using tele-operation technology, as soon as robotic embodiments are involved. Thus, this paper presents our current project, in which we are comparing the efficiency of transmitting nonverbal signals by means of ``Daryl'' featuring an abstract, mildly humanized design, against that of ``Geminoid F'', which features a highly anthropomorphic design. The ability of both of these robots to convey emotions by means of body movements has been successfully evaluated before, but using this ability to transmit nonverbal signals during remote conversation and comparing the resp. efficiencies has not yet been done.},
   langid = {english},
-  file = {/home/avnerus/Zotero/storage/E89BR33Z/Becker-Asano et al. - The Effect of Anthropomorphism on Social Tele-Embo.pdf}
+  file = {/home/avnerus/Zotero/storage/E89BR33Z/Becker-Asano et al. - The Effect of Anthropomorphism on Social Tele-Embo.pdf;/home/avnerus/Zotero/storage/NJUSJEJG/Telepresence-Robots-in-Higher-Education-the-Current-State-of-Research.pdf}
 }
 
 @article{becker-asanoEXPLORINGUNCANNYVALLEY2010,
@@ -1248,6 +1248,24 @@
   langid = {english}
 }
 
+@article{bleakleyBridgingSocialDistance2022,
+  title = {Bridging Social Distance during Social Distancing: Exploring Social Talk and Remote Collegiality in Video Conferencing},
+  shorttitle = {Bridging Social Distance during Social Distancing},
+  author = {Bleakley, Anna and Rough, Daniel and Edwards, Justin and Doyle, Philip and Dumbleton, Odile and Clark, Leigh and Rintel, Sean and Wade, Vincent and Cowan, Benjamin R.},
+  year = {2022},
+  month = sep,
+  journal = {Human\textendash Computer Interaction},
+  volume = {37},
+  number = {5},
+  pages = {404--432},
+  publisher = {{Taylor \& Francis}},
+  issn = {0737-0024},
+  doi = {10.1080/07370024.2021.1994859},
+  keywords = {colleagues,collegiality,Communication,COVID,multiparty,social talk,video conferencing,working from home},
+  annotation = {\_eprint: https://doi.org/10.1080/07370024.2021.1994859},
+  file = {/home/avnerus/Zotero/storage/PITN5FEA/Bleakley et al. - 2022 - Bridging social distance during social distancing.pdf;/home/avnerus/Zotero/storage/T9IXEBJE/07370024.2021.html}
+}
+
 @incollection{blissChapter21Crosscultural2021,
   title = {Chapter 21 - {{Cross-cultural}} Trust of Robot Peacekeepers as a Function of Dialog, Appearance, Responsibilities, and Onboard Weapons},
   booktitle = {Trust in {{Human-Robot Interaction}}},
@@ -1449,6 +1467,15 @@
   doi = {10.1191/1478088706qp063oa},
   langid = {english},
   file = {/home/avnerus/Zotero/storage/9JPAEEV6/Braun and Clarke - 2006 - Using thematic analysis in psychology.pdf}
+}
+
+@article{breazealSocialRobotics2016,
+  title = {Social Robotics},
+  author = {Breazeal, Cynthia and Dautenhahn, Kerstin and Kanda, Takayuki},
+  year = {2016},
+  journal = {Springer handbook of robotics},
+  pages = {1935--1972},
+  publisher = {{Springer}}
 }
 
 @article{brechtChineseActing1961,
@@ -1867,6 +1894,22 @@
   abstract = {Smart gloves have been under development during the last 40 years to support humancomputer interaction based on hand and finger movement. Despite the many devoted efforts and the multiple advances in related areas, these devices have not become mainstream yet. Nevertheless, during recent years, new devices with improved features have appeared, being used for research purposes too. This paper provides a review of current commercial smart gloves focusing on three main capabilities: (i) hand and finger pose estimation and motion tracking, (ii) kinesthetic feedback, and (iii) tactile feedback. For the first capability, a detailed reference model of the hand and finger basic movements (known as degrees of freedom) is proposed. Based on the PRISMA guidelines for systematic reviews for the period 2015\textendash 2021, 24 commercial smart gloves have been identified, while many others have been discarded because they did not meet the inclusion criteria: currently active commercial and fully portable smart gloves providing some of the three main capabilities for the whole hand. The paper reviews the technologies involved, main applications and it discusses about the current state of development. Reference models to support end users and researchers comparing and selecting the most appropriate devices are identified as a key need.},
   langid = {english},
   file = {/home/avnerus/Zotero/storage/RLJ37A8L/Caeiro-Rodríguez et al. - 2021 - A Systematic Review of Commercial Smart Gloves Cu.pdf}
+}
+
+@article{cakalInvestigationSocialIdentity2011,
+  title = {An Investigation of the Social Identity Model of Collective Action and the `Sedative' Effect of Intergroup Contact among {{Black}} and {{White}} Students in {{South Africa}}},
+  author = {Cakal, Huseyin and Hewstone, Miles and Schw{\"a}r, Gerhard and Heath, Anthony},
+  year = {2011},
+  journal = {British Journal of Social Psychology},
+  volume = {50},
+  number = {4},
+  pages = {606--627},
+  issn = {2044-8309},
+  doi = {10.1111/j.2044-8309.2011.02075.x},
+  abstract = {Two studies investigated the role of intergroup contact in predicting collective action tendencies along with three key predictors proposed by the social identity model of collective action (SIMCA; Van Zomeren, Postmes, \& Spears, 2008). Study 1 (N= 488 Black South African students) tested whether social identity would positively, whereas intergroup contact would negatively predict collective action and support for policies benefiting the ingroup. Study 2 (N= 244 White South African students) predicted whether social identity would positively predict collective action benefiting the ingroup, and intergroup contact would positively predict support for policies to benefit the Black outgroup. Both studies yielded evidence in support of the predictive power of social identity and contact on collective action and policy support. Additionally, Study 1 confirmed that intergroup contact moderated the effects of social identity on relative deprivation, and relative deprivation on collective action. Overall findings support an integration of SIMCA and intergroup contact theory, and provide a fuller understanding of the social psychological processes leading to collective action.},
+  langid = {english},
+  annotation = {\_eprint: https://bpspsychub.onlinelibrary.wiley.com/doi/pdf/10.1111/j.2044-8309.2011.02075.x},
+  file = {/home/avnerus/Zotero/storage/IPGNZPWV/Cakal et al. - 2011 - An investigation of the social identity model of c.pdf;/home/avnerus/Zotero/storage/T89J8H4Z/j.2044-8309.2011.02075.html}
 }
 
 @inproceedings{caldwellTelepresenceVisualAudio1994,
@@ -3384,6 +3427,25 @@
   file = {/home/avnerus/Zotero/storage/E3Z2AUUU/explore-kuri.html}
 }
 
+@article{falconeStandardGuidelinesDesign2022,
+  title = {Toward {{Standard Guidelines}} to {{Design}} the {{Sense}} of {{Embodiment}} in {{Teleoperation Applications}}: {{A Review}} and {{Toolbox}}},
+  shorttitle = {Toward {{Standard Guidelines}} to {{Design}} the {{Sense}} of {{Embodiment}} in {{Teleoperation Applications}}},
+  author = {Falcone, Sara and Englebienne, Gwenn and Van Erp, Jan and Heylen, Dirk},
+  year = {2022},
+  month = mar,
+  journal = {Human\textendash Computer Interaction},
+  volume = {0},
+  number = {0},
+  pages = {1--30},
+  publisher = {{Taylor \& Francis}},
+  issn = {0737-0024},
+  doi = {10.1080/07370024.2022.2039147},
+  abstract = {We present a literature review and a toolbox to help the reader find the best method to design for and assess Sense of Embodiment (SoE) in several application scenarios. The main examples are based on teleoperation applications, due the challenges that these applications present. The three embodiment components that we consider to describe SoE are sense of ownership, sense of agency, and sense of self-location. We relate each embodiment component to the most often used assessment measures, test tasks, and application scenarios. The toolbox is built to efficiently design, test, and assess an embodiment experience, following seven concrete steps. We provide four main contributions: 1) a literature review of the assessment measures and strategies used to measure SoE; 2) a systematic categorization of SoE measures; 3) A categorization of the main test tasks used in SoE assessment; and 4) a toolbox consisting of seven steps as guidance to design SoE. We included several examples and tables to guide the user step by step through the design of an embodiment experience.},
+  keywords = {assessment,cognitive science,design methods,design tools,Embodiment,human-robot interaction,interaction/industrial design,performance,teleoperation,virtual reality},
+  annotation = {\_eprint: https://doi.org/10.1080/07370024.2022.2039147},
+  file = {/home/avnerus/Zotero/storage/ZCLALUU5/Falcone et al. - 2022 - Toward Standard Guidelines to Design the Sense of .pdf;/home/avnerus/Zotero/storage/FTNHQJTA/07370024.2022.html}
+}
+
 @book{fanonBlackSkinWhite2008,
   title = {Black Skin, White Masks},
   author = {Fanon, Frantz},
@@ -4894,6 +4956,42 @@
   file = {/home/avnerus/Zotero/storage/HTZ8VV3X/Hasler - Virtual Reality as an Empathy Machine.pdf}
 }
 
+@article{hasslerIntergroupContactSocial2021,
+  title = {Intergroup Contact and Social Change: {{An}} Integrated {{Contact}}-{{Collective Action Model}}},
+  shorttitle = {Intergroup Contact and Social Change},
+  author = {H{\"a}ssler, Tabea and Ulu{\u g}, {\"O}zden Melis and Kappmeier, Mariska and Travaglino, Giovanni A.},
+  year = {2021},
+  month = mar,
+  journal = {Journal of Social Issues},
+  volume = {77},
+  number = {1},
+  pages = {217--241},
+  issn = {0022-4537, 1540-4560},
+  doi = {10.1111/josi.12412},
+  abstract = {Previous research has shown that positive intergroup contact among disadvantaged group members may predict a so-called sedative effect according to which positive contact is associated with reduced support for social change. Conversely, positive contact is associated with increased support for social change toward equality among advantaged group members. This raises the important question of under which circumstances intergroup contact can encourage support for social change among both disadvantaged and advantaged groups. In this theoretical article, we tackle this question by introducing a new Integrated ContactCollective Action Model (ICCAM). We first provide an upto-date review of how intergroup contact may promote or hinder social change for both disadvantaged and advantaged groups. We, then, use ICCAM to examine when the many forms of intergroup contact promote or hinder support for social change, proposing the existence of two different paths for disadvantaged and advantaged group members. Finally, we discuss the implications of the model for social intervention and make policy recommendations stemming from a review of available evidence.},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/N3GXEHQK/Hässler et al. - 2021 - Intergroup contact and social change An integrate.pdf}
+}
+
+@article{hasslerLargescaleTestLink2020,
+  title = {A Large-Scale Test of the Link between Intergroup Contact and Support for Social Change},
+  author = {H{\"a}ssler, Tabea and Ullrich, Johannes and Bernardino, Michelle and Shnabel, Nurit and Laar, Colette Van and Valdenegro, Daniel and Sebben, Simone and Tropp, Linda R. and Visintin, Emilio Paolo and Gonz{\'a}lez, Roberto and Ditlmann, Ruth K. and Abrams, Dominic and Selvanathan, Hema Preya and Brankovi{\'c}, Marija and Wright, Stephen and {von Zimmermann}, Jorina and Pasek, Michael and Aydin, Anna Lisa and {\v Z}e{\v z}elj, Iris and Pereira, Adrienne and Lantos, N{\'o}ra Anna and Sainz, Mario and Glenz, Andreas and Oberpfalzerov{\'a}, Hana and Bilewicz, Michal and Kende, Anna and Kuzawinska, Olga and Otten, Sabine and Maloku, Edona and Noor, Masi and Gul, Pelin and Pistella, Jessica and Baiocco, Roberto and Jelic, Margareta and Osin, Evgeny and Bareket, Orly and Biruski, Dinka Corkalo and Cook, Jonathan E. and Dawood, Maneeza and Droogendyk, Lisa and Loyo, Ang{\'e}lica Herrera and Kelmendi, Kaltrina and Ugarte, Luiza Mugnol},
+  year = {2020},
+  month = apr,
+  journal = {Nature Human Behaviour},
+  volume = {4},
+  number = {4},
+  pages = {380--386},
+  publisher = {{Nature Publishing Group}},
+  issn = {2397-3374},
+  doi = {10.1038/s41562-019-0815-z},
+  abstract = {Guided by the early findings of social scientists, practitioners have long advocated for greater contact between groups to reduce prejudice and increase social cohesion. Recent work, however, suggests that intergroup contact can undermine support for social change towards greater equality, especially among disadvantaged group members. Using a large and heterogeneous dataset (12,997 individuals from 69 countries), we demonstrate that intergroup contact and support for social change towards greater equality are positively associated among members of advantaged groups (ethnic majorities and cis-heterosexuals) but negatively associated among disadvantaged groups (ethnic minorities and sexual and gender minorities). Specification-curve analysis revealed important variation in the size\textemdash and at times, direction\textemdash of correlations, depending on how contact and support for social change were measured. This allowed us to identify one type of support for change\textemdash willingness to work in solidarity\textemdash{} that is positively associated with intergroup contact among both advantaged and disadvantaged group members.},
+  copyright = {2020 The Author(s), under exclusive licence to Springer Nature Limited},
+  langid = {english},
+  keywords = {Human behaviour,Social policy},
+  file = {/home/avnerus/Zotero/storage/HFPVMSZ8/Hässler et al. - 2020 - A large-scale test of the link between intergroup .pdf;/home/avnerus/Zotero/storage/4X8YAHUL/s41562-019-0815-z.html}
+}
+
 @article{hassonEnemyGazeImmersive2019,
   title = {The Enemy's Gaze: {{Immersive}} Virtual Environments Enhance Peace Promoting Attitudes and Emotions in Violent Intergroup Conflicts},
   shorttitle = {The Enemy's Gaze},
@@ -5547,6 +5645,24 @@
   file = {/home/avnerus/Zotero/storage/ISGQTFGT/Hovy et al. - Can You Translate that into Man Commercial Machin.pdf}
 }
 
+@article{howeRemoteWorkMindsets2021,
+  title = {Remote Work Mindsets Predict Emotions and Productivity in Home Office: {{A}} Longitudinal Study of Knowledge Workers during the {{Covid-19}} Pandemic},
+  shorttitle = {Remote Work Mindsets Predict Emotions and Productivity in Home Office},
+  author = {Howe, Lauren C. and Menges, Jochen I.},
+  year = {2021},
+  month = nov,
+  journal = {Human\textendash Computer Interaction},
+  volume = {0},
+  number = {0},
+  pages = {1--27},
+  publisher = {{Taylor \& Francis}},
+  issn = {0737-0024},
+  doi = {10.1080/07370024.2021.1987238},
+  keywords = {emotion,employee well-being,mindsets,productivity,Remote work,telecommuting},
+  annotation = {\_eprint: https://doi.org/10.1080/07370024.2021.1987238},
+  file = {/home/avnerus/Zotero/storage/MAK54SH9/Howe and Menges - 2021 - Remote work mindsets predict emotions and producti.pdf;/home/avnerus/Zotero/storage/HZ47TEVT/07370024.2021.html}
+}
+
 @article{huaLearningRobotDeep2021,
   title = {Learning for a {{Robot}}: {{Deep Reinforcement Learning}}, {{Imitation Learning}}, {{Transfer Learning}}},
   shorttitle = {Learning for a {{Robot}}},
@@ -5691,6 +5807,16 @@
   isbn = {978-1-4244-2840-3},
   langid = {english},
   file = {/home/avnerus/Zotero/storage/WXJ7WTLM/Hwang et al. - 2008 - Augmented robot agent Enhancing co-presence of th.pdf}
+}
+
+@article{identityStruggleSocialEquality2009,
+  title = {The Struggle for Social Equality: {{Collective}} Action versus Prejudice Reduction},
+  author = {Identity, Collective},
+  year = {2009},
+  journal = {Intergroup misunderstandings: Impact of divergent social realities},
+  pages = {291},
+  publisher = {{Taylor \& Francis}},
+  isbn = {1848728034}
 }
 
 @article{ihdeHomoFaberRevisited2018,
@@ -7328,6 +7454,15 @@
   file = {/home/avnerus/Zotero/storage/3MQCL67Z/S1471772713000067.html}
 }
 
+@article{leosteTelepresenceRobotsHigher,
+  title = {Telepresence {{Robots}} in {{Higher Education}} \textendash{} the {{Current State}} of {{Research}}},
+  author = {Leoste, Janika and Kikkas, Kaido and Tammem{\"a}e, Kalle and Rebane, Martin and Laugasson, Edmund and Hakk, Kristiina},
+  pages = {11},
+  abstract = {Distance learning may lead to decreased social presence of students in higher education, potentially causing deterioration of both student learning outcomes and their mental health. Telepresence robotics is seen as an approach that, through the embodied agent of a robotic body, enhances student social presence in the classroom, improving the quality of classroom interaction. In the literature review, we analyzed the current state of research on using telepresence robots in higher education, and, based on existing papers, studied the strengths and weaknesses of using these robots in higher education. Based on our findings, we suggest that the literature in this area is scarce, requiring further studies in the future. The current telepresence robots struggle in relaying flawless telepresence experience, but can still be recommended in certain scenarios. We conclude that despite telepresence robotics being a promising technology, longitudinal studies are required to reach better understanding about the features that telepresence robots should have when used in higher education and about the best use methods.},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/NHVEHMGK/Leoste et al. - Telepresence Robots in Higher Education – the Curr.pdf}
+}
+
 @misc{LetRobotUser,
   title = {Let's {{Robot}} - {{User Created Robotic Telepresence Network}}},
   howpublished = {https://letsrobot.tv/},
@@ -7883,6 +8018,24 @@
   langid = {english}
 }
 
+@article{markIntroductionThisSpecial2022,
+  title = {Introduction to This Special Issue: The Future of Remote Work: Responses to the Pandemic},
+  shorttitle = {Introduction to This Special Issue},
+  author = {Mark, Gloria and Kun, Andrew L. and Rintel, Sean and Sellen, Abigail},
+  year = {2022},
+  month = sep,
+  journal = {Human\textendash Computer Interaction},
+  volume = {37},
+  number = {5},
+  pages = {397--403},
+  publisher = {{Taylor \& Francis}},
+  issn = {0737-0024},
+  doi = {10.1080/07370024.2022.2038170},
+  keywords = {Collaboration tools,Future of Work; Covid-19; remote work; technology use},
+  annotation = {\_eprint: https://doi.org/10.1080/07370024.2022.2038170},
+  file = {/home/avnerus/Zotero/storage/72PDMANP/Mark et al. - 2022 - Introduction to this special issue the future of .pdf;/home/avnerus/Zotero/storage/IEWGXXQI/07370024.2022.html}
+}
+
 @book{marresDigitalSociologyReinvention2017,
   title = {Digital Sociology: {{The}} Reinvention of Social Research},
   author = {Marres, Noortje},
@@ -8144,7 +8297,7 @@
   doi = {10.1006/jesp.2000.1470},
   abstract = {Heretofore, no research has shown that meaningful variability on the Implicit Association Test (IAT) relates to intergroup discrimination or to explicit measures of prejudice. In the current study, White undergraduates interacted separately with White and Black experimenters, and their behavior during these social interactions was assessed by trained judges and by the experimenters themselves. The participants also completed explicit measures of racial prejudice and a race IAT. As predicted, those who revealed stronger negative attitudes toward Blacks (vs Whites) on the IAT had more negative social interactions with a Black (vs a White) experimenter and reported relatively more negative Black prejudices on explicit measures. The implications of these results for the IAT and its relations to intergroup discrimination and to explicit measures of attitudes are discussed.},
   langid = {english},
-  file = {/home/avnerus/Zotero/storage/PWGTAV8F/McConnell and Leibold - 2001 - Relations among the Implicit Association Test, Dis.pdf;/home/avnerus/Zotero/storage/TA9ATNXJ/S0022103100914707.html}
+  file = {/home/avnerus/Zotero/storage/PWGTAV8F/McConnell and Leibold - 2001 - Relations among the Implicit Association Test, Dis.pdf;/home/avnerus/Zotero/storage/XDY3IVTN/Journal of Social Issues - 2021 - H ssler - Intergroup contact and social change An integrated Contact‐Collective Action.pdf;/home/avnerus/Zotero/storage/TA9ATNXJ/S0022103100914707.html}
 }
 
 @article{mcdonnellTeachingPhotographyPhotography2020,
@@ -8198,6 +8351,24 @@
   volume = {4},
   isbn = {1178-7708},
   file = {/home/avnerus/Zotero/storage/JJZEL9FQ/Journal-2013-08-McNaughton.pdf}
+}
+
+@article{mcveigh-schultzBeingThereVR2022,
+  title = {A ``beyond Being There'' for {{VR}} Meetings: Envisioning the Future of Remote Work},
+  shorttitle = {A ``beyond Being There'' for {{VR}} Meetings},
+  author = {{McVeigh-Schultz}, Joshua and Isbister, Katherine},
+  year = {2022},
+  month = sep,
+  journal = {Human\textendash Computer Interaction},
+  volume = {37},
+  number = {5},
+  pages = {433--453},
+  publisher = {{Taylor \& Francis}},
+  issn = {0737-0024},
+  doi = {10.1080/07370024.2021.1994860},
+  keywords = {meetings,social affordances,social superpowers,social VR,Virtual reality},
+  annotation = {\_eprint: https://doi.org/10.1080/07370024.2021.1994860},
+  file = {/home/avnerus/Zotero/storage/TFRHWPUA/McVeigh-Schultz and Isbister - 2022 - A “beyond being there” for VR meetings envisionin.pdf;/home/avnerus/Zotero/storage/MLQVGJJF/07370024.2021.html}
 }
 
 @misc{MeBot,
@@ -8681,6 +8852,22 @@
   abstract = {Globalization presents opportunities and challenges for developing regions such as sub-Saharan Africa as they seek to improve their levels of socioeconomic development. Processes of globalization increasingly depend upon information and communication technologies (ICTs), and these normally need modifications to fit local contexts. This requires that processes that affect interactions between global, regional, and local levels need to be understood. It appears reasonable to conjecture that understanding the roles or effects of socioeconomic and cultural factors (among others) would lead to more effective ICT policies for sustainable development at regional and local levels. Drawing on Sen's capability theory of human development, a modified version of the Technology Acceptance Model (TAM) is presented, and validated by analyzing survey data gathered in two sub-Saharan African countries, although no claim is made as to the model's generalizability. Some diagnostics and prescriptions for how to effect sustainable technology adoption and development across the region to enhance human capabilities are then presented. C 2006 Wiley Periodicals, Inc.},
   langid = {english},
   file = {/home/avnerus/Zotero/storage/JILZPDAH/Musa - 2006 - Making a case for modifying the technology accepta.pdf}
+}
+
+@article{nadlerIntergroupReconciliationInstrumental2015,
+  title = {Intergroup Reconciliation: {{Instrumental}} and Socio-Emotional Processes and the Needs-Based Model},
+  shorttitle = {Intergroup Reconciliation},
+  author = {Nadler, Arie and Shnabel, Nurit},
+  year = {2015},
+  month = jan,
+  journal = {European Review of Social Psychology},
+  volume = {26},
+  number = {1},
+  pages = {93--125},
+  issn = {1046-3283, 1479-277X},
+  doi = {10.1080/10463283.2015.1106712},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/UU8L63TI/Nadler and Shnabel - 2015 - Intergroup reconciliation Instrumental and socio-.pdf}
 }
 
 @article{nagarIntergroupAttitudesInterpersonal2021,
@@ -10678,6 +10865,25 @@
   file = {/home/avnerus/Zotero/storage/UVTWF9BG/Safron - 2020 - An Integrated World Modeling Theory (IWMT) of Cons.pdf}
 }
 
+@article{saguyContactIntergroupContact2008,
+  title = {Beyond {{Contact}}: {{Intergroup Contact}} in the {{Context}} of {{Power Relations}}},
+  shorttitle = {Beyond {{Contact}}},
+  author = {Saguy, Tamar and Dovidio, John F. and Pratto, Felicia},
+  year = {2008},
+  month = mar,
+  journal = {Personality and Social Psychology Bulletin},
+  volume = {34},
+  number = {3},
+  pages = {432--445},
+  publisher = {{SAGE Publications Inc}},
+  issn = {0146-1672},
+  doi = {10.1177/0146167207311200},
+  abstract = {This work investigated how group-based power affects the motivations and preferences that members of advantaged and disadvantaged groups bring to situations of contact. To measure the preferred content of interactions, desires to address particular topics in intergroup contact were assessed for both experimental groups (Study 1) and real groups (Study 2). As predicted, across both studies, the desire to talk about power was greater among members of disadvantaged than of advantaged groups. This difference was mediated by motivation for change in group-based power. Study 2 further demonstrated that more highly identified members of disadvantaged groups wanted to talk about power more. Members of advantaged groups generally preferred to talk about commonalities between the groups more than about group-based power, and this desire was greater with higher levels of identification. However, perceiving that their group's advantage was illegitimate increased the desire of advantaged group members to address power in intergroup interactions.},
+  langid = {english},
+  keywords = {change motivation,contact,group position,group power},
+  file = {/home/avnerus/Zotero/storage/5XY7BXNF/Saguy et al. - 2008 - Beyond Contact Intergroup Contact in the Context .pdf}
+}
+
 @article{saguyIronyHarmonyIntergroup2009,
   title = {The {{Irony}} of {{Harmony}}: {{Intergroup Contact Can Produce False Expectations}} for {{Equality}}},
   shorttitle = {The {{Irony}} of {{Harmony}}},
@@ -11387,6 +11593,18 @@
   abstract = {The aim of this article is to identify and define the diagnostic and therapeutic qualities of clay-work in contemporary conceptualization (attachment theory, object relation, and psychoanalytic theory). Three central features of clay-work are highlighted: (1) procedural expression through touch, movement, and the three-dimensional aspect; (2) the reflection of construction and deconstruction processes; and (3) the regression process. The authors differentiate six therapeutic factors that emerged from a review of the literature: facilitating expression of emotions, catharsis, rich and deep expressions, verbal communication, revealing unconscious material, and concretization and symbolization. Short case examples of therapeutic processes are described to illustrate these ideas.},
   langid = {english},
   file = {/home/avnerus/Zotero/storage/229I5NVY/Sholt and Gavron - 2006 - Therapeutic Qualities of Clay-work in Art Therapy .pdf}
+}
+
+@book{sicilianoSpringerHandbookRobotics2016,
+  title = {Springer {{Handbook}} of {{Robotics}}},
+  editor = {Siciliano, Bruno and Khatib, Oussama},
+  year = {2016},
+  publisher = {{Springer International Publishing}},
+  address = {{Cham}},
+  doi = {10.1007/978-3-319-32552-1},
+  isbn = {978-3-319-32550-7 978-3-319-32552-1},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/DKVF7L2Q/Siciliano and Khatib - 2016 - Springer Handbook of Robotics.pdf}
 }
 
 @article{sieversMusicMovementShare2013,
@@ -12107,6 +12325,24 @@
   author = {Syv{\"a}oja, Heidi and Kantomaa, Marko and Laine, Kaarlo and Jaakkola, Timo and Pyh{\"a}lt{\"o}, Kirsi and Tammelin, Tuija},
   year = {2012},
   journal = {Tilannekatsaus lokakuu. Helsinki: Opetushallitus.}
+}
+
+@article{taberCatsKidsVideo2022,
+  title = {Cats, {{Kids}}, and Video Calls: How Working from Home Affects Media Self-Presentation},
+  shorttitle = {Cats, {{Kids}}, and Video Calls},
+  author = {Taber, Lee and Dominguez, Sonia and Whittaker, Steve},
+  year = {2022},
+  month = sep,
+  journal = {Human\textendash Computer Interaction},
+  volume = {37},
+  number = {5},
+  pages = {454--479},
+  publisher = {{Taylor \& Francis}},
+  issn = {0737-0024},
+  doi = {10.1080/07370024.2021.1970557},
+  keywords = {affordances,audiences,collaborative systems,COVID,HCI theory,media theory,office workers,personal tools; collaboration tools,personality,Self-presentation,social theory; personal systems,students,video,working from home},
+  annotation = {\_eprint: https://doi.org/10.1080/07370024.2021.1970557},
+  file = {/home/avnerus/Zotero/storage/MAZH9AI4/Taber et al. - 2022 - Cats, Kids, and video calls how working from home.pdf;/home/avnerus/Zotero/storage/C5ZSZ39N/07370024.2021.html}
 }
 
 @article{tachiTelexistenceEnablingHumans2016,
@@ -13322,6 +13558,14 @@
   pages = {232},
   langid = {english},
   file = {/home/avnerus/Zotero/storage/RB6ECZW9/A World of Strangers Order and Action in Urban Pu.pdf}
+}
+
+@article{wrightStruggleSocialEquality2009,
+  title = {The Struggle for Social Equality: {{Collective}} Action versus Prejudice Reduction.},
+  author = {Wright, Stephen C. and Lubensky, Micah E.},
+  year = {2009},
+  publisher = {{Psychology Press}},
+  isbn = {1848728034}
 }
 
 @article{wulfmeierMaximumEntropyDeep2016,
